--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -2,7 +2,7 @@
 
 @main(loginForm) {
 
-Github user @user.login has the following repositories:
+Github user <em>@user.login</em> has the following repositories:
 <ul>
 @for(repo <- repos) {
  <li>@repo.name</li>
