--- a/app/views/error.scala.html
+++ b/app/views/error.scala.html
@@ -1,17 +1,5 @@
 @(msg: String)
 
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <title>Github hop ... Ooops</title>
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
-    </head>
-    <body>
-
-      @msg
-
-    </body>
-</html>
+@skeleton("Ooops...") {
+  @msg
+}
