--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,18 +1,6 @@
 @(loginForm: Form[String])(content: Html)
 
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <title>Github hop</title>
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
-    </head>
-    <body>
-
+@skeleton("Github hop") {
       @login_widget(loginForm)
       @content
-
-    </body>
-</html>
+}
