rest api and final touch

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,6 +1,6 @@
 @(loginForm: Form[String])(content: Html)
 
-@skeleton("Github hop") {
+@skeleton("Github Hop") {
       @login_widget(loginForm)
       @content
 }
